# ICPC_Manager

./: .gitignore  CMakeLists.txt  callgrind.out.17688  code
.cache/clangd/index/: main.cpp.AAAE9517CB04EB26.idx  parser.hpp.88BE8CA60C7FDE13.idx  team.hpp.95EB1EFE98CEA33C.idx  token.hpp.CA8D266605C7CC19.idx
include/: parser.hpp  team.hpp  token.hpp
scripts/: run_tests.sh
src/: main.cpp
